Changes for 1.7.0

 - [DEV-339] added a dummy function for DB cache monitoring (Alexei)
 - [DEV-411] database cache is enabled by default now (Alexei)
 - [DEV-399] added information about monitored hosts to the discovery screen (Sasha)
 - [DEV-358] added notification macros {NODE.*[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.LOG.*[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.VALUE} and {ITEM.VALUE[1..9]} (Sasha)
 - [DEV-358] added notification/trigger description macros {ITEM.LASTVALUE[1..9]} (Sasha)
 - [DEV-358] added notification macros {HOST.CONN[1..9]} {HOST.DNS[1..9]} {IPADDRESS[1..9]} (Sasha)
 - [DEV-358] added notification macros {TRIGGER.KEY[1..9]} (Sasha)
 - [DEV-358] added notification/trigger description macros {HOSTNAME[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.NAME[1..9]} (Sasha)
 - [DEV-358] added notification macros {PROFILE.*[1..9]} (Sasha)
 - [DEV-405] added highlighting of selected rows (Artem)
 - [DEV-397] added user name to output of {ESC.HISTORY} macros (Sasha)
 - [DEV-397] added notification macros {EVENT.ACK.STATUS} and {EVENT.ACK.HISTORY} (Sasha)
 - [DEV-405] Proxies, Nodes moved under "Administration->DM" (Artem)
 - [DEV-405] Items, Triggers, Graphs moved under "Configuration->Hosts" (Artem)
 - [DEV-405] Host Groups, Maintenancess moved under "Configuration" (Artem)
 - [DEV-406] added milliseconds to log files of all Zabbix daemon processes (Alexei)
 - [DEV-350] cleanup of sample config files, added sample of windows agent config (Alexei)
 - [DEV-404] improved web history (Vedmak)
 - [ZBX-961] fixed history strings saved not by reference (Vedmak)
 - [DEV-403] added Debug mode for user groups in order to simplify GUI troubleshooting (Alexei)
 - [ZBX-773] fixed typo 'attribures' (Richlv)
 - [ZBX-974] recompressed most frontend images with pngcrush (Richlv)
 - [DEV-400] added necessary link between hosts and groups (Artem)
 - [ZBX-944] fixed changelog reference (Richlv)