@@ -41,11 +41,11 @@ dbschema:
 	create/schema/gen.pl oracle > create/schema/oracle.sql
 	create/schema/gen.pl c >src/libs/zbxdbhigh/dbschema.c
 	echo -e "\n#ifdef HAVE_MYSQL\nconst char *db_schema= {\"\\" >>src/libs/zbxdbhigh/dbschema.c
-	create/schema/gen.pl mysql|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
+	create/schema/gen.pl mysql|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
 	echo -e "\"};\n#elif HAVE_POSTGRESQL\nconst char *db_schema = {\"\\" >>src/libs/zbxdbhigh/dbschema.c
-	create/schema/gen.pl postgresql|sed -e 's/\t\t*/ /g' -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
+	create/schema/gen.pl postgresql|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
 	echo -e "\"};\n#elif HAVE_ORACLE\nconst char *db_schema = {\"\\" >>src/libs/zbxdbhigh/dbschema.c
-	create/schema/gen.pl oracle|sed -e 's/\t\t*/ /g' -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
+	create/schema/gen.pl oracle|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
 	echo -e "\"};\n#elif HAVE_SQLITE3\nconst char *db_schema = {\"\\"  >>src/libs/zbxdbhigh/dbschema.c
-	create/schema/gen.pl sqlite|sed -e 's/\t\t*/ /g' -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
+	create/schema/gen.pl sqlite|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
 	echo -e "\"};\n#endif /* HAVE_SQLITE3 */\n" >>src/libs/zbxdbhigh/dbschema.c
