@@ -32,13 +32,13 @@ export CFLAGS="-Wall -Wuninitialized -O -g"
 for db in mysql; do
 	./configure --enable-proxy --enable-agent --enable-server --with-jabber --with-ldap --with-libcurl --with-$db --with-net-snmp --prefix=`pwd` --enable-ipv6 2>>WARNINGS >/dev/null
 	echo Cleaning...
-	make clean 2>>WARNINGS >/dev/null
+	make -j4 clean 2>>WARNINGS >/dev/null
 	echo Making dbschema...
-	make dbschema 2>>WARNINGS >/dev/null
+	make -j4 dbschema 2>>WARNINGS >/dev/null
 	echo Making...
 	make 2>>WARNINGS >/dev/null
 	echo Installing...
-	make install 2>>WARNINGS >/dev/null
+	make -j4 install 2>>WARNINGS >/dev/null
 done
 
 echo
